GimliAnnotator with a test