@@ -2,6 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>ch.epfl.bbp</groupId>
+  <version>1.0.1</version>
   <artifactId>uima_gimli</artifactId>
   <name>Gimli UIMA Annotator</name>
   <url>bioinformatics.ua.pt/support/gimli/doc/index.html</url>
@@ -12,13 +14,30 @@
     </license>
   </licenses>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.14</version>
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+          <forkMode>once</forkMode>
+          <argLine>-Xmx4096m -XX:MaxPermSize=128M -XX:-UseConcMarkSweepGC</argLine>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
+
   <dependencies>
-        <dependency>
+    <dependency>
       <groupId>org.uimafit</groupId>
       <artifactId>uimafit</artifactId>
       <version>1.3.0</version>
     </dependency>
-
     <dependency>
       <groupId>pt.ua.tm</groupId>
       <artifactId>gimli</artifactId>
